# geomanager

./: .env.sample  .gitignore  LICENSE  README.md  boot_django.py  makemigrations.py  setup.cfg
.github/workflows/: publish.yml
geomanager/: admin.py  apps.py  blocks.py  constants.py  decorators.py  errors.py  forms.py  helpers.py  settings.py  storage.py  urls.py  validators.py  wagtail_hooks.py  widgets.py
geomanager/admin/: __init__.py  base.py  boundary.py  category.py  dataset.py  mbt_source.py  metadata.py  raster_file.py  raster_style.py  raster_tile.py  stations.py  vector_file.py  vector_tile.py  wms.py
geomanager/forms/: __init__.py  aoi.py  boundary.py  geomanager_user_profile.py  raster_file.py  raster_style.py  vector_file.py  vector_table.py
geomanager/migrations/: 0001_initial.py  0001_squashed_0024_rastertilelayer_get_time_from_tile_json_and_more.py  0002_alter_category_public_alter_dataset_layer_type_and_more.py  0002_geomanagersettings_logo_and_more.py  0002_vectorlayer_render_layers.py  0003_alter_colorvalue_label_alter_colorvalue_threshold_and_more.py  0003_alter_dataset_category_alter_dataset_sub_category_and_more.py  0003_alter_vectorlayer_render_layers.py  0004_alter_dataset_can_clip.py  0004_geomanagersettings_cap_metadata_and_more.py  0004_geomanageruser.py  0005_alter_vectorlayer_render_layers_and_more.py  0005_delete_countryboundary_and_more.py  0005_geomanagersettings_gadm_version.py  0006_alter_vectorlayer_legend_alter_wmslayer_legend.py  0006_dataset_can_clip_and_more.py  0006_stationsettings.py  0007_fileimagelayer_analysis.py  0007_remove_stationsettings_id_field_and_more.py  0008_alter_fileimagelayer_analysis.py  0008_stationsettings_name_column.py  0009_geomanageruserprofile_alter_fileimagelayer_analysis_and_more.py  0009_stationsettings_popup_props.py  0010_alter_geomanageruserprofile_country_and_more.py  0010_remove_stationsettings_popup_props.py  0011_alter_geomanageruserprofile_options_and_more.py  0011_vectorlayericon.py  0012_areaofinterest_tags.py  0012_geomanagersettings_crop_raster_to_country.py  0013_areaofinterest_webhook_url.py  0013_geomanagersettings_logo_external_link_and_more.py  0014_geomanagersettings_privacy_policy_page_and_more.py  0015_wmslayer_request_time_from_capabilities.py  0016_wmslayer_date_format.py  0017_wmslayer_more_info_alter_wmslayer_date_format.py  0018_wmslayer_custom_get_capabilities_url.py  0019_wmslayer_get_capabilities_layer_name_and_more.py  0020_tmslayer.py  0021_rasterfilelayer_rastertilelayer_vectorfilelayer_and_more.py  0022_alter_rastertilelayer_options_and_more.py  (+32 more)
geomanager/models/: __init__.py  aoi.py  boundary.py  core.py  geomanager_settings.py  geostore.py  profile.py  raster.py  raster_file.py  raster_style.py  raster_tile.py  stations.py  tile_base.py  tile_gl.py  tms.py  user.py  vector.py  vector_file.py  vector_tile.py  wms.py
layermanager/: MANIFEST.in  __init__.py  admin.py  apps.py  blocks.py  errors.py  forms.py  helpers.py  icons.py  urls.py  wagtail_hooks.py  widgets.py
sandbox/: requirements.txt
(+181 files in other folders)
