[metadata]
name = wagtail-layermanager
version = 0.0.1
description = Wagtail based Geospatial Layer Manager
long_description = file:README.md
url = https://github.com/wmo-raf/wagtail-layermanager
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2
    django_extensions>=3.2.1
    wagtail_color_panel>=1.4.1
    django_json_widget>=1.1.1
    django_nextjs>= 2.2.2
    django-allauth>=0.54.0
    django-large-image>=0.9.0
    django-filter>=22.1
    geopandas>=0.12.2
    cftime>=1.6.2
    netCDF4>=1.6.3
    rasterio>=1.3.6
    rio-cogeo>=3.5.1
    xarray>=2023.3.0
    rioxarray>=0.14.0
    shapely>=2.0.1
    djangorestframework-simplejwt>=5.2.2





