[metadata]
name = geomanager
version = 0.5.0
description = Wagtail based Geospatial Data Manager
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/erick-otenyo/geomanager
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    wagtail>=4.2.2
    wagtail-modeladmin>=1.0.0
    adm-boundary-manager>=0.1.0
    django_extensions>=3.2.1
    wagtail_color_panel>=1.4.1
    wagtail-font-awesome-svg>=1.0.1
    django_json_widget>=1.1.1
    django_nextjs==2.4.0
    django-allauth>=0.54.0
    django-large-image>=0.10.0
    large-image-source-rasterio>=1.22.2
    large-image-source-pil>=1.22.2
    django-filter>=22.1
    cftime>=1.6.2
    netCDF4>=1.6.3
    rasterio>=1.3.6
    rio-cogeo>=3.5.1
    xarray>=2023.3.0
    rioxarray>=0.14.0
    shapely>=2.0.1
    djangorestframework-simplejwt>=5.2.2
    wagtail-humanitarian-icons>=2.0.0
    wagtail-icon-chooser>=0.0.5
    matplotlib>=3.7.1
    CairoSVG>=2.7.0
    wagtail-cache>=2.3.0
    Magics==1.5.8
    ecmwflibs==0.6.3
    mercantile>=1.2.1